# tactical-rag-system

./: .env.example  .gitignore  404.html  BREAKTHROUGH_SUMMARY_v3.8.md  CHANGELOG_v3.7.md  CNAME  DEMO_BUILD_REPORT.md  DEMO_COMPONENTS_GUIDE.md  DOCUMENTATION_SITE_COMPLETE.md  EDGE_CASE_EXECUTIVE_SUMMARY.md  EDGE_CASE_TEST_PLAN.md  EMBEDDING_UPGRADE_FINDINGS.md  FRONTEND_STREAMING_IMPLEMENTATION.md  GITHUB_READY_CHECKLIST.md  GIT_COMMIT_GUIDE.md  GRADIO_DEPRECATION_NOTICE.md  IMPLEMENTATION_GUIDE_v3.8.md  IMPLEMENTATION_ROADMAP_PHASE2.md  IMPROVEMENTS.md  INFRASTRUCTURE_AUDIT_REPORT.md  INTERACTIVE_DEMOS_README.md  MULTI_MODEL_QUICKSTART.md  New Text Document.txt  OPTIMIZATION_ROADMAP_V2.md  OVERNIGHT_PROGRESS_REPORT.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_TEST_RESULTS.md  PHASE_0_RETRIEVAL_QUALITY_PLAN.md  PHASE_1_BACKEND_RESULTS.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_INTEGRATION_STATUS.md  PRODUCTION_FIXES_REPORT.md  PRODUCTION_MIGRATION_PLAN.md  PRODUCTION_READINESS_REPORT.md  QA_AUDIT_REPORT.md  QUERY_IMPROVEMENT_PROPOSAL.md  QUICK_START_PRODUCTION.md  QUICK_WIN_7_IMPLEMENTATION.md  QUICK_WIN_8_BLOCKER.md  RAG_INNOVATIONS_RESEARCH_2024_2025.md  (+56 more)
.ai/: DEVELOPMENT.md  baseline_report.md  multi_agent_framework.md
.claude/: codebase_intelligence.py  config.json  incremental_updater.py  mendicant_bias_integration.py  onboarding.py  serena_indexer.py  settings.local.json
404/: index.html
_config/: Dockerfile  decorruptor.ps1  deploy.ps1  requirements.txt  startup.sh  stop.ps1  swap-mission.ps1
_src/: adaptive_retrieval.py  app.py  benchmark_suite.py  cache_and_monitoring.py  cache_next_gen.py  changelist.md  collection_metadata.py  config.py  conversation_memory.py  document_processor.py  embedding_cache.py  evaluate.py  explainability.py  feedback_system.py  index_documents - Copy.py  index_documents.py  llm_factory.py  llm_factory_v2.py  model_registry.py  performance_monitor.py  qdrant_store.py  quick_profiler.py  test_conversation_integration.py  test_conversation_memory.py  test_explainability.py  test_feedback_integration.py  vllm_client.py  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  ollama.rs  sidecar.rs
src-tauri/src/rag/: commands.rs  config.rs  embeddings.rs  mod.rs  tests.rs  types.rs
(+404 files in other folders)
