[package]
name = "tactical-rag-desktop"
version = "4.0.0"
description = "Tactical RAG Desktop - Document Intelligence System"
authors = ["Tactical RAG Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
open = "5.0"

# ATLAS Protocol - Phase 1: Embedding Service Dependencies
# Commented out: Backend handles embeddings via Python (llama-cpp-python with CUDA)
# ort = { version = "2.0.0-rc.10", features = ["cuda", "download-binaries"] }
# tokenizers = "0.15"
# rayon = "1.8"
# anyhow = "1.0"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# thiserror = "1.0"
# ndarray = "0.16"
